--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-    <script src="esui.js"></script>
 
-    <div class="cunt"></div>
+    <div id="container"></div>
+   <script src="esui.js"></script>
 </body>
 </html>
