--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-
+    <button class="eight">8x8</button>
+    <button class="sixteen">16x16</button>
+    <button class="thirtysix">32x32</button>
+    <button class="sixtyfour">64x64</button>
+    <button class="onetwoeight">128x128</button>
     <div id="container"></div>
    <script src="esui.js"></script>
 </body>
