--- a/index.html
+++ b/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gravitas+One&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body> 
+<body>
+    <div id="containerscont">
+    <div class="leftcont">
+    <button class="usrinpt">ADD YOUR GRID!</button>
+    <div class="buttons">
+    <h4>Presets</h4>
     <button class="eight">8x8</button>
     <button class="sixteen">16x16</button>
     <button class="thirtysix">32x32</button>
     <button class="sixtyfour">64x64</button>
     <button class="onetwoeight">128x128</button>
+    </div>
+    </div>
+    <div class="headalign">
+    <h1>Etch-a-Sketch</h1>
     <div id="container"></div>
+    </div>
+    </div>
    <script src="esui.js"></script>
 </body>
 </html>
