--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 <body>
     <div id="containerscont">
     <div class="leftcont">
+    <h2>Select a grid and start your Etch-a-Sketch journey!</h2>
+    <div class="btns">
     <button class="usrinpt">ADD YOUR GRID!</button>
     <div class="buttons">
-    <h4>Presets</h4>
+    <h3>Presets</h3>
     <button class="eight">8x8</button>
     <button class="sixteen">16x16</button>
     <button class="thirtysix">32x32</button>
     <button class="sixtyfour">64x64</button>
     <button class="onetwoeight">128x128</button>
+    </div>
     </div>
     </div>
     <div class="headalign">
